--- a/benchmarks.ipynb
+++ b/benchmarks.ipynb
@@ -2,51 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Read benchmark data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = pd.read_csv('python/benchmarks_py.csv')"
+    "benchmarks_py = pd.read_csv('python/benchmarks_py.csv')\n",
+    "benchmarks_jl = pd.read_csv('julia/benchmarks_jl.csv')\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 26 entries, 0 to 25\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column     Non-Null Count  Dtype  \n",
-      "---  ------     --------------  -----  \n",
-      " 0   Problem    26 non-null     int64  \n",
-      " 1   Date       26 non-null     object \n",
-      " 2   Benchmark  26 non-null     float64\n",
-      "dtypes: float64(1), int64(1), object(1)\n",
-      "memory usage: 756.0+ bytes\n"
-     ]
-    }
-   ],
    "source": [
-    "p.info()"
+    "#### Show Benchmarks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -70,158 +60,167 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>Benchmark</th>\n",
+       "      <th>Python</th>\n",
+       "      <th>Julia</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Problem</th>\n",
-       "      <th>Date</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.000013</td>\n",
+       "      <td>14613</td>\n",
+       "      <td>795.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.000006</td>\n",
+       "      <td>6884</td>\n",
+       "      <td>195.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.001406</td>\n",
+       "      <td>1547143</td>\n",
+       "      <td>1833.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.121776</td>\n",
+       "      <td>143396386</td>\n",
+       "      <td>29445376.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>6.802064</td>\n",
+       "      <th>31</th>\n",
+       "      <td>1139428827655</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.000004</td>\n",
+       "      <th>35</th>\n",
+       "      <td>1753186651881</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.023532</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.000923</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>8.574732</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.536644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.000339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.000002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>12.121455</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.000020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.001626</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.000045</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.000099</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.000014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>2.024526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>0.001154</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <th>2024-10-16</th>\n",
-       "      <td>18.086037</td>\n",
+       "      <th>37</th>\n",
+       "      <td>327822188500</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Benchmark\n",
-       "Problem Date                 \n",
-       "1       2024-10-16   0.000013\n",
-       "2       2024-10-16   0.000006\n",
-       "3       2024-10-16   0.001406\n",
-       "4       2024-10-16   0.121776\n",
-       "5       2024-10-16   6.802064\n",
-       "6       2024-10-16   0.000004\n",
-       "7       2024-10-16   0.023532\n",
-       "8       2024-10-16   0.000923\n",
-       "9       2024-10-16   8.574732\n",
-       "10      2024-10-16   0.536644\n",
-       "11      2024-10-16   0.000339\n",
-       "13      2024-10-16   0.000002\n",
-       "14      2024-10-16  12.121455\n",
-       "16      2024-10-16   0.000020\n",
-       "17      2024-10-16   0.001626\n",
-       "18      2024-10-16   0.000045\n",
-       "19      2024-10-16   0.000099\n",
-       "20      2024-10-16   0.000014\n",
-       "21      2024-10-16   2.024526\n",
-       "22      2024-10-16   0.001154\n",
-       "23      2024-10-16  18.086037"
+       "                Python       Julia\n",
+       "Problem                           \n",
+       "1                14613       795.0\n",
+       "2                 6884       195.0\n",
+       "3              1547143      1833.0\n",
+       "4            143396386  29445376.0\n",
+       "31       1139428827655         NaN\n",
+       "35       1753186651881         NaN\n",
+       "37        327822188500         NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p.groupby(by = ['Problem', 'Date']).min()"
+    "benchmarks_py['Python'] = [round(t) for t in benchmarks_py['Python']]\n",
+    "benchmarks_jl['Julia'] = [round(t) for t in benchmarks_jl['Julia']]\n",
+    "\n",
+    "benchmarks = pd.merge(\n",
+    "    benchmarks_py.groupby(by = ['Problem', 'Date']).min(),\n",
+    "    benchmarks_jl.groupby(by = ['Problem', 'Date']).min(),\n",
+    "    how = 'outer', \n",
+    "    on = 'Problem'\n",
+    ")\n",
+    "\n",
+    "benchmarks # in nanoseconds (ns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How much faster is Julia compared to Python?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Faster (x times)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Problem</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>844.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Faster (x times)\n",
+       "Problem                  \n",
+       "1                    18.4\n",
+       "2                    35.3\n",
+       "3                   844.0\n",
+       "4                     4.9"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "benchmarks.dropna(inplace=True)\n",
+    "benchmarks['Python'] = [round(t) for t in benchmarks['Python']]\n",
+    "benchmarks['Julia'] = [round(t) for t in benchmarks['Julia']]\n",
+    "benchmarks['Faster (x times)'] = [round(p/j, 1) for (p, j) in zip(benchmarks.Python, benchmarks.Julia)]\n",
+    "benchmarks.loc[:, ['Faster (x times)']]"
    ]
   }
  ],
