--- a/julia/problem_044.ipynb
+++ b/julia/problem_044.ipynb
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "236042ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Combinatorics, BenchmarkTools"
+    "using Combinatorics, BenchmarkTools\n",
+    "include(\"./euler.jl\");"
    ]
   },
   {
@@ -51,16 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "24e4c57f",
+   "id": "b86e941c",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1501.618147 seconds (699.61 M allocations: 7.294 TiB, 24.66% gc time)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -72,21 +66,53 @@
     }
    ],
    "source": [
-    "@time pentagon_numbers()"
+    "pentagon_numbers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "24e4c57f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
+       " Single result which took \u001b[34m1968.167 s\u001b[39m (16.10% GC) to evaluate,\n",
+       " with a memory estimate of \u001b[33m7467.71 GiB\u001b[39m, over \u001b[33m799595274\u001b[39m allocations."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b = @benchmark pentagon_numbers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6a036d40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "euler.save_benchmark(44, b);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.5",
+   "display_name": "Julia 1.11.0",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.5"
+   "version": "1.11.0"
   }
  },
  "nbformat": 4,
