--- a/python/problem_001.ipynb
+++ b/python/problem_001.ipynb
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45.7 μs ± 468 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "50.1 μs ± 3.84 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.7 μs ± 215 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "49 μs ± 1.08 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -169,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.8 μs ± 36.3 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "14.6 μs ± 343 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
