--- a/python/problem_004.ipynb
+++ b/python/problem_004.ipynb
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "122 ms ± 760 μs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "143 ms ± 1.22 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
