--- a/python/problem_035.ipynb
+++ b/python/problem_035.ipynb
@@ -12,12 +12,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9121639c",
+   "id": "b572f0e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup\n",
-    "n = 1_000_000"
+    "import euler"
    ]
   },
   {
@@ -27,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Is prime?\n",
     "def isprime(n):\n",
     "    if n <= 1:\n",
     "        return False\n",
@@ -35,8 +33,7 @@
     "        for i in range(2, (n//2)+1):\n",
     "            if n%i == 0:\n",
     "                return False\n",
-    "        return True\n",
-    "            "
+    "        return True"
    ]
   },
   {
@@ -44,21 +41,9 @@
    "execution_count": 3,
    "id": "8227fe9e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "isprime(197)"
+    "assert isprime(197) == True"
    ]
   },
   {
@@ -68,7 +53,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Rotation\n",
     "def rotation(n):\n",
     "    rotations = []\n",
     "    s = str(n)\n",
@@ -84,21 +68,9 @@
    "execution_count": 5,
    "id": "9f557103",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[197, 971, 719]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "rotation(197)"
+    "assert rotation(197) == [197, 971, 719]"
    ]
   },
   {
@@ -108,7 +80,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Circular Primes\n",
     "def circular_primes(numbers):\n",
     "    return all([isprime(x) for x in numbers])"
    ]
@@ -118,27 +89,31 @@
    "execution_count": 7,
    "id": "73ba52a6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test run\n",
-    "circular_primes([197, 971, 719])"
+    "assert circular_primes([197, 971, 719]) == True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "id": "39238b36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def circulars(n):\n",
+    "    counter = 0\n",
+    "    primes = [x for x in range(1, n) if isprime(x)]\n",
+    "    for p in primes:\n",
+    "        if circular_primes(rotation(p)):\n",
+    "            counter += 1\n",
+    "    return counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "eb63d3d1",
    "metadata": {},
    "outputs": [
     {
@@ -147,19 +122,32 @@
        "55"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "counter = 0\n",
-    "primes = [x for x in range(1, n) if isprime(x)]\n",
-    "for p in primes:\n",
-    "    if  circular_primes(rotation(p)):\n",
-    "        counter += 1\n",
-    "counter"
+    "circulars(1_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5ac16e18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29min 13s ± 1min 39s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = %timeit -o circulars(1_000_000)\n",
+    "euler.save_benchmark(35, t)"
    ]
   }
  ],
