--- a/python/problem_037.ipynb
+++ b/python/problem_037.ipynb
@@ -12,12 +12,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9121639c",
+   "id": "f6eca067",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup\n",
-    "n = 11"
+    "import euler"
    ]
   },
   {
@@ -27,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Is prime?\n",
     "def isprime(n):\n",
     "    if n <= 1:\n",
     "        return False\n",
@@ -35,8 +33,7 @@
     "        for i in range(2, (n//2)+1):\n",
     "            if n%i == 0:\n",
     "                return False\n",
-    "        return True\n",
-    "            "
+    "        return True"
    ]
   },
   {
@@ -46,7 +43,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prime generator\n",
     "def eratosthenes():\n",
     "\t'''Yields the sequence of prime numbers via the Sieve of Eratosthenes.'''\n",
     "\tD = {}  # map composite integers to primes witnessing their compositeness\n",
@@ -65,18 +61,27 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "781a8458",
+   "id": "a9bae2bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prime\n",
-    "prime = eratosthenes()"
+    "def truncatable_primes(n):\n",
+    "    prime = eratosthenes()\n",
+    "    counter = 0\n",
+    "    primes = []\n",
+    "    while counter < n:\n",
+    "        p = next(prime)\n",
+    "        s = str(p)\n",
+    "        if all([isprime(y) for y in set([int(s[:x]) for x in range(1, len(s)+1)] + [int(s[x:]) for x in range(len(s))])]) and p > 7:\n",
+    "            primes.append(p)\n",
+    "            counter += 1\n",
+    "    return sum(primes)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a9bae2bf",
+   "id": "ce0e9940",
    "metadata": {},
    "outputs": [
     {
@@ -91,16 +96,26 @@
     }
    ],
    "source": [
-    "# Answer\n",
-    "counter = 0\n",
-    "primes = []\n",
-    "while counter < n:\n",
-    "    p = next(prime)\n",
-    "    s = str(p)\n",
-    "    if all([isprime(y) for y in set([int(s[:x]) for x in range(1, len(s)+1)] + [int(s[x:]) for x in range(len(s))])]) and p > 7:\n",
-    "        primes.append(p)\n",
-    "        counter += 1\n",
-    "sum(primes)\n"
+    "truncatable_primes(11) # 2, 3, 5 and 7 are not considered to be truncatable primes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "67da81b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5min 27s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = %timeit -o -n1 -r1 truncatable_primes(11)\n",
+    "euler.save_benchmark(37, t)"
    ]
   }
  ],
