--- a/python/problem_031.ipynb
+++ b/python/problem_031.ipynb
@@ -12,7 +12,39 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "e8543f3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import euler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "17602470",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coin_sums():\n",
+    "    counter = 0\n",
+    "    for a in range(1+1): # 200p\n",
+    "        for b in range(2+1): # 100p\n",
+    "            for c in range(4+1): # 50p\n",
+    "                for d in range(10+1): # 20p\n",
+    "                    for e in range(20+1): # 10p\n",
+    "                        for f in range(40+1): # 5p\n",
+    "                            for g in range(100+1): # 2p\n",
+    "                                for h in range(200+1): # 1p\n",
+    "                                    if a*200 + b*100 + c*50 + d*20 + e*10 + f*5 + g*2 + h*1 == 200:\n",
+    "                                        counter += 1\n",
+    "    return counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e4f036fe",
    "metadata": {},
    "outputs": [
     {
@@ -21,25 +53,32 @@
        "73682"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer (brute force)\n",
-    "counter = 0\n",
-    "for a in range(1+1): # 200p\n",
-    "    for b in range(2+1): # 100p\n",
-    "        for c in range(4+1): # 50p\n",
-    "            for d in range(10+1): # 20p\n",
-    "                for e in range(20+1): # 10p\n",
-    "                    for f in range(40+1): # 5p\n",
-    "                        for g in range(100+1): # 2p\n",
-    "                            for h in range(200+1): # 1p\n",
-    "                                if a*200 + b*100 + c*50 + d*20 + e*10 + f*5 + g*2 + h*1 == 200:\n",
-    "                                    counter += 1\n",
-    "counter"
+    "coin_sums()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f58b754d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18min 59s ± 14.3 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = %timeit -o coin_sums()\n",
+    "euler.save_benchmark(31, t)"
    ]
   }
  ],
