--- a/python/problem_044.ipynb
+++ b/python/problem_044.ipynb
@@ -16,48 +16,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
-    "import itertools"
+    "import itertools\n",
+    "import euler"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1415ed5e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Setup\n",
-    "n = 10_000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "6b9715e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pentagonal\n",
     "def pentagonal(n):\n",
     "    return int(n*(3*n - 1)/2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2421e2f1",
+   "execution_count": 3,
+   "id": "537ecdb1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pentagonal list\n",
-    "pentagonal_list = [pentagonal(i) for i in range(1, n+1)]\n"
+    "def pentagon_numbers(n):\n",
+    "    pentagonal_list = [pentagonal(i) for i in range(1, n+1)]\n",
+    "    result = []\n",
+    "    for x in itertools.permutations(pentagonal_list, 2):\n",
+    "        if x[1]-x[0] in pentagonal_list and sum(x) in pentagonal_list:\n",
+    "            result.append(abs(x[0]-x[1]))\n",
+    "    return min(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4ac74ba0",
+   "execution_count": 4,
+   "id": "8624a435",
    "metadata": {},
    "outputs": [
     {
@@ -66,18 +59,32 @@
        "5482660"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Answer\n",
-    "result = []\n",
-    "for x in itertools.permutations(pentagonal_list, 2):\n",
-    "    if x[1]-x[0] in pentagonal_list and sum(x) in pentagonal_list:\n",
-    "        result.append(abs(x[0]-x[1]))\n",
-    "min(result)"
+    "pentagon_numbers(10_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "21a423a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1h 44min 19s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = %timeit -o -n1 -r1 pentagon_numbers(10_000)\n",
+    "euler.save_benchmark(44, t)"
    ]
   }
  ],
